syntax = "proto3";

import "common.proto";

// Interface exported by the server.
service HeraldRPC {
  rpc HeraldVote(Radiant)returns (Roles){}
}