syntax = "proto3";


import "common.proto";

service RadiantRPC {
    rpc BeaconHandshake (Beacon) returns (BeaconResponse) {}
    rpc JoinSystem(Radiant)returns (ConfigSummary){}
    rpc LeaveSystem(Radiant)returns (ConfigSummary){}

    rpc RadiantVote(Radiant)returns (Role){}

    rpc CurrentRoles(Bondsmith)returns(Roles){}

    rpc CurrentOrderMembership(OrderId)returns(Order){}

    rpc MoveShardRequest(ShardMoveRequest) returns (ShardMoveRequestResponse){}
}
